<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_share_result"
        android:title="@string/action_share_result"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share_app"
        android:title="@string/action_share_app"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_rate_app"
        android:title="@string/action_rate_app"
        app:showAsAction="never"/>
    <item android:id="@+id/action_know_rules"
        android:title="@string/action_know_rules"
        app:showAsAction="never"/>
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
</menu>